# lib_waylandshells

./: CMakeLists.txt
waylandshells/xdg-shell/: CMakeLists.txt  main.cpp  qwaylandxdgactivationv1.cpp  qwaylandxdgactivationv1_p.h  qwaylandxdgdecorationv1_p.h  qwaylandxdgshell.cpp  qwaylandxdgshell_p.h  qwaylandxdgshellintegration.cpp  qwaylandxdgshellintegration_p.h
